--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+
+.navbar{
+
+    background-image: linear-gradient(to right, #672280, #A626D3);
+
+    display: flex;
+    justify-content: space-between;
+
+    height: 65px;
+    width: 550px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#logo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-left: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#title{
+    font-family: Karla;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20.7482px;
+    line-height: 24px;
+    letter-spacing: -0.1em;
+
+    color: #FFFFFF;
+
+    margin-left: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+#info{
 
-.App-link {
-  color: #61dafb;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+    text-align: right;
+    
+    color: #FFFFFF;
+
+    margin-right: 20px;
 }
