--- a/src/App.css
+++ b/src/App.css
@@ -64,20 +64,6 @@ main{
 }
  
 
-
-#text1,
-#text2 {
-    font-family: "Karla", sans-serif;
-  width: 40vw;
-  height: 35px;
-
-  border: 1px solid #d5d4d8;
-  box-sizing: border-box;
-  border-radius: 5px;
-  border: 1px solid #D5D4D8;
-  text-indent: 5px;
-}
-
 .form--button {
     font-family: "Karla", sans-serif;
     grid-column: 1/-1;
@@ -91,4 +77,46 @@ main{
 .meme--image{
   max-width: 100%;
 
+}
+
+.meme {
+  position: relative;
+}
+
+.meme--image {
+  max-width: 100%;
+  border-radius: 3px;
+}
+
+.meme--text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow:
+      2px 2px 0 #000,
+      -2px -2px 0 #000,
+      2px -2px 0 #000,
+      -2px 2px 0 #000,
+      0 2px 0 #000,
+      2px 0 0 #000,
+      0 -2px 0 #000,
+      -2px 0 0 #000,
+      2px 2px 5px #000;
+}
+
+.bottom {
+  bottom: 0;
+}
+
+.top {
+  top: 0;
 }
